versions/8.2/_sources/api/iqm_client.iqm_client.rst
iqm\_client.iqm\_client
=======================

.. automodule:: iqm_client.iqm_client

   
   
   .. rubric:: Module Attributes

   .. autosummary::
      :toctree:
   
      CircuitMeasurementResults
   
   

   
   
   .. rubric:: Functions

   .. autosummary::
      :toctree:
   
      serialize_qubit_mapping
   
   

   
   
   .. rubric:: Classes

   .. autosummary::
      :toctree:
      :template: autosummary-class-template.rst
   
      AuthRequest
      Circuit
      Credentials
      ExternalToken
      GrantType
      IQMClient
      Instruction
      Metadata
      QuantumArchitecture
      QuantumArchitectureSpecification
      RunRequest
      RunResult
      RunStatus
      SingleQubitMapping
      Status
   
   

   
   
   .. rubric:: Exceptions

   .. autosummary::
      :toctree:
   
      APITimeoutError
      CircuitExecutionError
      ClientAuthenticationError
      ClientConfigurationError
   
   







.. rubric:: Inheritance

.. inheritance-diagram:: iqm_client.iqm_client
   :parts: 1

